tests/negative/test_import_local.orb
fnc main () () {
    import "util/print.orb";
};